syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "api/grpc/v1/service_line_item;service_line_item_grpc_service";

// Enum for BilledType
enum BilledType {
  MONTHLY_BILLED = 0;
  ANNUALLY_BILLED = 1;
  ONCE_BILLED = 2; // For One-Time
  USAGE_BILLED = 3; // For Usage
}

message CreateServiceLineItemGrpcRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  BilledType billed = 3;
  int64 quantity = 4; // Relevant only for Subscription type
  float price = 5;
  string name = 6;
  string contractId = 7;
  SourceFields sourceFields = 8;
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
}


message UpdateServiceLineItemGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string name = 4;
  float price = 5;
  int64 quantity = 6;
  BilledType billed = 7;
  google.protobuf.Timestamp updatedAt = 8;
  SourceFields sourceFields = 9;
}

// Service line item response message
message ServiceLineItemIdGrpcResponse {
  string id = 1;
}

// Service definition
service ServiceLineItemGrpcService {
  rpc CreateServiceLineItem(CreateServiceLineItemGrpcRequest) returns (ServiceLineItemIdGrpcResponse);
  rpc UpdateServiceLineItem(UpdateServiceLineItemGrpcRequest) returns (ServiceLineItemIdGrpcResponse);
}