syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "common/source.proto";
import "common/common.proto";

option go_package = "api/grpc/v1/tenant;tenant_grpc_service";

message AddBillingProfileRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  google.protobuf.Timestamp createdAt = 3;
  SourceFields sourceFields = 4;
  string email = 5 [deprecated = true];
  string phone = 6;
  string legalName = 7;
  string addressLine1 = 8;
  string addressLine2 = 9;
  string addressLine3 = 10;
  string domesticPaymentsBankName = 11;
  string domesticPaymentsAccountNumber = 12;
  string domesticPaymentsSortCode = 13;
  string internationalPaymentsSwiftBic = 14;
  string internationalPaymentsBankName = 15;
  string internationalPaymentsBankAddress = 16;
  string internationalPaymentsInstructions = 17;
  string locality = 18;
  string country = 19;
  string zip = 20;
  string domesticPaymentsBankInfo = 21;
  string internationalPaymentsBankInfo = 22;
  string vatNumber = 23;
  string sendInvoicesFrom = 24;
  bool canPayWithCard = 25;
  bool canPayWithDirectDebitSEPA = 26;
  bool canPayWithDirectDebitACH = 27;
  bool canPayWithDirectDebitBacs = 28;
  bool canPayWithPigeon = 29;
  string sendInvoicesBcc = 30;
  bool canPayWithBankTransfer = 31;
}

enum TenantBillingProfileFieldMask {
  TENANT_BILLING_PROFILE_FIELD_NONE = 0; // No property, ignored by the server
  TENANT_BILLING_PROFILE_FIELD_EMAIL = 1 [deprecated = true];
  TENANT_BILLING_PROFILE_FIELD_PHONE = 2;
  TENANT_BILLING_PROFILE_FIELD_LEGAL_NAME = 3;
  TENANT_BILLING_PROFILE_FIELD_ADDRESS_LINE_1 = 4;
  TENANT_BILLING_PROFILE_FIELD_ADDRESS_LINE_2 = 5;
  TENANT_BILLING_PROFILE_FIELD_ADDRESS_LINE_3 = 6;
  TENANT_BILLING_PROFILE_FIELD_LOCALITY = 7;
  TENANT_BILLING_PROFILE_FIELD_COUNTRY = 8;
  TENANT_BILLING_PROFILE_FIELD_ZIP = 9;
  TENANT_BILLING_PROFILE_FIELD_DOMESTIC_PAYMENTS_BANK_INFO = 10;
  TENANT_BILLING_PROFILE_FIELD_INTERNATIONAL_PAYMENTS_BANK_INFO = 11;
  TENANT_BILLING_PROFILE_FIELD_VAT_NUMBER = 12;
  TENANT_BILLING_PROFILE_FIELD_SEND_INVOICES_FROM = 13;
  TENANT_BILLING_PROFILE_FIELD_CAN_PAY_WITH_CARD = 14;
  TENANT_BILLING_PROFILE_FIELD_CAN_PAY_WITH_DIRECT_DEBIT_SEPA = 15;
  TENANT_BILLING_PROFILE_FIELD_CAN_PAY_WITH_DIRECT_DEBIT_ACH = 16;
  TENANT_BILLING_PROFILE_FIELD_CAN_PAY_WITH_DIRECT_DEBIT_BACS = 17;
  TENANT_BILLING_PROFILE_FIELD_CAN_PAY_WITH_PIGEON = 18;
  TENANT_BILLING_PROFILE_FIELD_SEND_INVOICES_BCC = 19;
  TENANT_BILLING_PROFILE_FIELD_CAN_PAY_WITH_BANK_TRANSFER = 20;
}

message UpdateBillingProfileRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  string id = 3;
  google.protobuf.Timestamp updatedAt = 4;
  string email = 5;
  string phone = 6;
  string legalName = 7;
  string addressLine1 = 8;
  string addressLine2 = 9;
  string addressLine3 = 10;
  string locality = 11;
  string country = 12;
  string zip = 13;
  string domesticPaymentsBankInfo = 14;
  string internationalPaymentsBankInfo = 15;
  string vatNumber = 16;
  string sendInvoicesFrom = 17;
  bool canPayWithCard = 18;
  bool canPayWithDirectDebitSEPA = 19;
  bool canPayWithDirectDebitACH = 20;
  bool canPayWithDirectDebitBacs = 21;
  bool canPayWithPigeon = 22;
  string appSource = 23;
  repeated TenantBillingProfileFieldMask fieldsMask = 24;
  string sendInvoicesBcc = 25;
  bool canPayWithBankTransfer = 26;
}

enum TenantSettingsFieldMask {
  TENANT_SETTINGS_FIELD_NONE = 0; // No property, ignored by the server
  TENANT_SETTINGS_FIELD_DEFAULT_CURRENCY = 1 [deprecated = true];
  TENANT_SETTINGS_FIELD_INVOICING_ENABLED = 2;
  TENANT_SETTINGS_FIELD_INVOICING_POSTPAID = 4;
  TENANT_SETTINGS_FIELD_LOGO_REPOSITORY_FILE_ID = 5;
  TENANT_SETTINGS_FIELD_BASE_CURRENCY = 6;
}

message UpdateTenantSettingsRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  google.protobuf.Timestamp updatedAt = 4;
  string appSource = 5;
  repeated TenantSettingsFieldMask fieldsMask = 6;
  string defaultCurrency = 7 [deprecated = true];
  bool invoicingEnabled = 8;
  bool invoicingPostpaid = 10;
  string logoRepositoryFileId = 11;
  string baseCurrency = 12;
}

message AddBankAccountGrpcRequest {
  string tenant = 1;
  string loggedInUserId = 2;
  google.protobuf.Timestamp createdAt = 3;
  SourceFields sourceFields = 4;
  string bankName = 5;
  bool bankTransferEnabled = 6;
  string currency = 7;
  string accountNumber = 8;
  string iban = 9;
  string bic = 10;
  string sortCode = 11;
  string routingNumber = 12;
  bool allowInternational = 13;
}

message UpdateBankAccountGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  google.protobuf.Timestamp updatedAt = 4;
  string appSource = 5;
  string bankName = 6;
  bool bankTransferEnabled = 7;
  string currency = 8;
  string accountNumber = 9;
  string iban = 10;
  string bic = 11;
  string sortCode = 12;
  string routingNumber = 13;
  repeated BankAccountFieldMask fieldsMask = 14;
  bool allowInternational = 15;
}

message DeleteBankAccountGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

enum BankAccountFieldMask {
  BANK_ACCOUNT_FIELD_NONE = 0; // No property, ignored by the server
  BANK_ACCOUNT_FIELD_BANK_NAME = 1;
  BANK_ACCOUNT_FIELD_BANK_TRANSFER_ENABLED = 2;
  BANK_ACCOUNT_FIELD_CURRENCY = 3;
  BANK_ACCOUNT_FIELD_ACCOUNT_NUMBER = 4;
  BANK_ACCOUNT_FIELD_IBAN = 5;
  BANK_ACCOUNT_FIELD_BIC = 6;
  BANK_ACCOUNT_FIELD_SORT_CODE = 7;
  BANK_ACCOUNT_FIELD_ROUTING_NUMBER = 8;
  BANK_ACCOUNT_FIELD_ALLOW_INTERNATIONAL = 9;
}

service tenantGrpcService {
  rpc AddBillingProfile(AddBillingProfileRequest) returns (IdResponse);
  rpc UpdateBillingProfile(UpdateBillingProfileRequest) returns (IdResponse);
  rpc UpdateTenantSettings(UpdateTenantSettingsRequest) returns (google.protobuf.Empty);
  rpc AddBankAccount(AddBankAccountGrpcRequest) returns (IdResponse);
  rpc UpdateBankAccount(UpdateBankAccountGrpcRequest) returns (IdResponse);
  rpc DeleteBankAccount(DeleteBankAccountGrpcRequest) returns (google.protobuf.Empty);
}